[package]
name = "encointer-offline-payment-core"
version = "0.1.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Core ZK circuit and prover for Encointer offline payments (pure arkworks, no substrate)"
license = "GPL-3.0-or-later"
repository = "https://github.com/encointer/pallets"

[dependencies]
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["r1cs", "sponge"] }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

[features]
default = ["std"]
std = [
    "ark-bn254/std",
    "ark-crypto-primitives/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-groth16/std",
    "ark-r1cs-std/std",
    "ark-relations/std",
    "ark-serialize/std",
    "ark-std/std",
]
