[package]
name = "encointer-offline-payment-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI wrapper for Encointer offline payment ZK prover (mobile targets)"
license = "GPL-3.0-or-later"

[lib]
name = "ew_zk_prover"
crate-type = ["cdylib", "staticlib", "lib"]

# Standalone workspace — not part of the pallets workspace
[workspace]

[features]
default = ["std"]
std = []

[dependencies]
# arkworks — must match pallet versions exactly (0.4.x)
ark-bn254 = { version = "0.4.0", features = ["curve"] }
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "sponge"] }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
ark-std = "0.4.0"
blake2 = "0.10"

[profile.release]
lto = true
opt-level = "z"
strip = true
